--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap" rel="stylesheet">');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap');
 
 *{
     padding:0;
